Time label align correct

--- a/core/static/calendar/css/calendar.css
+++ b/core/static/calendar/css/calendar.css
@@ -383,7 +383,7 @@ select {
 }
 
 .searchInput{
-    width: 493px;
+    width: 490px;
 }
 
 .eventBoxes{
@@ -396,21 +396,20 @@ select {
     border-style: solid;
     border-width: 1.5px;
     border-color: rgb(68, 170, 233);
-    width: 493px;
+    width: 490px;
     background-color: white;
 }
 
 .eventBox{
     position: relative;
-    width: 493px;
+    display: flex;
+    width: 480px;
 }
 
 .eventBoxLeft{
-    display: inline-flex;
-    width: 328px;
+    margin-left: 5px;
 }
 
 .eventBoxRight{
-    display: inline-flex;
-    justify-self: flex-end;
+    margin-left: auto;
 }
